--- a/django_blog/blog/templates/register.html
+++ b/django_blog/blog/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/css/styles.css' %}">
 </head>
 <body>
     <h2>Register</h2>
