--- a/django_blog/blog/templates/login.html
+++ b/django_blog/blog/templates/login.html
@@ -14,5 +14,6 @@
         <input type="password" name="password" placeholder="Password">
         <button type="submit">Login</button>
     </form>
+        <script src="{% static 'blog/js/script.js' %}"></script>
 </body>
 </html>
