--- a/django_blog/blog/templates/register.html
+++ b/django_blog/blog/templates/register.html
@@ -16,5 +16,6 @@
         <input type="password" name="password2" placeholder="Confirm Password">
         <button type="submit">Register</button>
     </form>
+        <script src="{% static 'blog/js/script.js' %}"></script>
 </body>
 </html>
