--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -16,6 +16,15 @@
                 <li><a href="{% url 'register' %}">Register</a></li>
             </ul>
         </nav>
+        <nav>
+    {% if user.is_authenticated %}
+        <a href="{% url 'post-create' %}">New Post</a>
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'register' %}">Register</a>
+    {% endif %}
+</nav>
     </header>
 
     <div class="content">
