--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -36,6 +36,11 @@
     <footer>
         <p>&copy; 2024 Django Blog</p>
     </footer>
+    <form method="GET" action="{% url 'search-results' %}" class="d-flex">
+    <input type="text" name="q" class="form-control" placeholder="Search posts...">
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
 
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
